src/objects/zkmulti__ExportDetails__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__B13aFilingOption__c</fullName>
        <label>B13A Filing Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Consolidation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consolidation</label>
        <referenceTo>zkmulti__MultiPackageShipment__c</referenceTo>
        <relationshipLabel>Export Details</relationshipLabel>
        <relationshipName>Export_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__ExportComplianceStatement__c</fullName>
        <description>Field for exporting-country-specific export data (e.g. B13A for CA, FTSR Exemption or AES Citation for US)</description>
        <inlineHelpText>Field for exporting-country-specific export data (e.g. B13A for CA, FTSR Exemption or AES Citation for US)</inlineHelpText>
        <label>Export Compliance Statement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__PermitNumber__c</fullName>
        <label>Permit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipName>FedEx_Export_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Export Details</label>
    <nameField>
        <displayFormat>ExportDetails-{00000000}</displayFormat>
        <label>FedEx Export Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Export Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>